# bokete_crawl

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
bokete_crawl/: items.py  middlewares.py  pipelines.py  settings.py
bokete_crawl/spiders/: odai.py
script/: download.sh
src/: crawl.py
