[tool.poetry]
name = "bokete_crawl"
version = "0.1.0"
description = ""
authors = [
    "misogil0116 <lack_un@yahoo.co.jp>",
    "Yuta Nakata <61623796+nukacha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.0.1"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
